--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Multiplayer Whiteboard",
   "main": "server.js",
   "scripts": {
-    "test": "mocha ./test/dbTest.js && node ./test/socketTest.js"
-  },
-  "scripts": {
     "test": "npm run test-db && npm run test-socket",
     "test-db": "mocha ./test/dbTest.js",
-    "test-socket": "mocha ./test/socketTest.js"
+    "test-socket": "mocha ./test/socketTest.js",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +25,7 @@
     "express": "^4.13.3",
     "grunt-docco": "^0.4.0",
     "mongoose": "^4.2.5",
+    "random-id": "0.0.2",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7"
   },
