--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "grunt-docco": "^0.4.0",
+    "gulp": "^3.9.0",
+    "gulp-chrome-manifest": "0.0.11",
     "mongoose": "^4.2.5",
     "random-id": "0.0.2",
     "socket.io": "^1.3.7",
