--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SpazzingLicorice/spazzinglicorice",
   "dependencies": {
     "angular": "^1.4.7",
+    "bcrypt": "^0.8.5",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
